<resources>
    <string name="app_name">My Application1</string>
    <string name="bill_amount_label">Bill Amount:</string>
    <string name="tip_percent_label">Tip:</string>
    <string name="tip_percent">20%</string>
    <string name="button_decrease">-</string>
    <string name="button_increase">+</string>
    <string name="tip_amount_label">Tip amount:</string>
    <string name="total_label">Total:</string>
    <string name="tip_amount">$0.00</string>
    <string name="total_amount">$0.00</string>
    <!--settings menu-->
    <string name ="menu_settings">settings</string>
    <string name="menu_about">About</string>
<!--    settings-->
    <string name="remember_tip_percent">Remember Tip Percent?</string>
    <string name="remember_tip_summary">Remember the tip percent for the most recent calculation</string>
    <string name="rounding_title">Roundings?</string>
    <string name="rounding_summary">Sets the rounding option for the calculation.</string>
    <string-array name="rounding_keys">
        <item>None</item>
        <item>Round Tip</item>
        <item>Round Total</item>
    </string-array>
    <string-array name="rounding_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="rounding_default">0</string>
    <string name="about_title">About</string>
    <string name="about_summary">This app calculates tips on the post-tax total of a bill</string>
</resources>
