<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ImageView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="A photo"
        android:src="@drawable/bar_room_04"
        android:scaleType="fitStart"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_amount_label"
                android:id="@+id/billAmountLabel"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#333333"/>

            <EditText
                android:id="@+id/billAmountEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_span="3"
                android:background="#999999"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/percentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_percent_label"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#111111"/>
            <TextView
                android:id="@+id/percentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_percent"
                tools:layout_editor_absoluteX="128dp"
                tools:layout_editor_absoluteY="98dp"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#aaaaaa"/>
            <Button
                android:id="@+id/percentButtonDown"
                android:layout_width="52dp"
                android:layout_height="48dp"
                android:text="@string/button_decrease"
                tools:layout_editor_absoluteX="197dp"
                tools:layout_editor_absoluteY="81dp" />

            <Button
                android:id="@+id/percentButtonUp"
                android:layout_width="52dp"
                android:layout_height="48dp"
                android:text="@string/button_increase"
                tools:layout_editor_absoluteX="289dp"
                tools:layout_editor_absoluteY="81dp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content
"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <!-- our first row -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tipLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_amount_label"
                tools:layout_editor_absoluteX="128dp"
                tools:layout_editor_absoluteY="149dp"
                android:textColor="#0000ff"
                android:textSize="30sp"
                android:background="#ffffff"/>

            <TextView
                android:id="@+id/tipTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_amount"
                tools:layout_editor_absoluteX="128dp"
                tools:layout_editor_absoluteY="149dp"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#0000ff" />
        </LinearLayout>

        <!-- our second row -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/totalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_label"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#0000ff" />

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:textColor="#000000"
                android:textSize="30sp"
                android:background="#00ff00" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>















